--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.6.1",
+    "firebase": "^11.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "vite": "^4.5.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^6.3.5"
   }
 }
